test-cases/negative/test_103_duplicate_function.lay
# negative test: defining same function twice
# expected: type checker should catch this

define function add that takes x and y and returns Number
  return x plus y

define function add that takes a and b and returns Number
  return a plus b


